<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textColor="@color/main_p"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout">

        <TextView
            android:id="@+id/myinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/user_info"/>

        <TextView
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/theme_color"/>

        <TextView
            android:id="@+id/userlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/user_list"/>

        <TextView
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/lang"/>

        <TextView
            android:id="@+id/logoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/sign_out"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/side_p"
            android:text="@string/delete"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
