<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <FrameLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dialog_cat"
                android:textColor="?android:attr/textColor"
                android:textSize="20sp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/shopping"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/shopping"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/shopping_text"
                android:drawablePadding="4dp"
                android:background="@drawable/shop_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/food"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/food"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/food_text"
                android:drawablePadding="4dp"
                android:background="@drawable/food_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/rent"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/rent"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/rent_text"
                android:drawablePadding="4dp"
                android:background="@drawable/rent_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/mobile_text"
                android:drawablePadding="4dp"
                android:background="@drawable/mobile_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="50dp"/>

            <TextView
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/card"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/card_text"
                android:drawablePadding="4dp"
                android:background="@drawable/card_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="160dp"/>

            <TextView
                android:id="@+id/hospital"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/hospital"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/hospital_text"
                android:drawablePadding="4dp"
                android:background="@drawable/hospital_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="250dp"/>

            <TextView
                android:id="@+id/social"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/social"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/social_text"
                android:drawablePadding="4dp"
                android:background="@drawable/social_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/hobby"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/hobby"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/hobby_text"
                android:drawablePadding="4dp"
                android:background="@drawable/hobby_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="150dp"/>

            <TextView
                android:id="@+id/ott"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/ott"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/netflix_back"
                android:drawablePadding="4dp"
                android:background="@drawable/ott_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="270dp"/>

            <TextView
                android:id="@+id/household"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/household"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/household_text"
                android:drawablePadding="4dp"
                android:background="@drawable/household_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="180dp"
                android:layout_marginStart="70dp"/>

            <TextView
                android:id="@+id/trans"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/trans"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/trans_text"
                android:drawablePadding="4dp"
                android:background="@drawable/trans_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="180dp"
                android:layout_marginStart="190dp"/>

            <TextView
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/sports"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/sports_text"
                android:drawablePadding="4dp"
                android:background="@drawable/sport_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="220dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/loan"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/loan"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/loan_text"
                android:drawablePadding="4dp"
                android:background="@drawable/loan_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="220dp"
                android:layout_marginStart="100dp"/>

            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/edu"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/edu_text"
                android:drawablePadding="4dp"
                android:background="@drawable/edu_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="220dp"
                android:layout_marginStart="185dp"/>

            <TextView
                android:id="@+id/etc"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/etc"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/etc_text"
                android:drawablePadding="4dp"
                android:background="@drawable/etc_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="220dp"
                android:layout_marginStart="270dp"/>

            <TextView
                android:id="@+id/editBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/save"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="300dp"/>

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/cancel"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="180dp"
                android:layout_marginTop="300dp"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
