<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <FrameLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dialog_acc"
                android:textColor="?android:attr/textColor"
                android:textSize="20sp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/cash"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/cash_text"
                android:drawablePadding="4dp"
                android:background="@drawable/hobby_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/bank"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/bank"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/bank_text"
                android:drawablePadding="4dp"
                android:background="@drawable/mobile_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/credit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableRight="@drawable/credit_card_text"
                android:drawablePadding="4dp"
                android:background="@drawable/trans_back"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="100dp"/>


            <TextView
                android:id="@+id/editBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/save"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="300dp"/>

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/cancel"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="180dp"
                android:layout_marginTop="300dp"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
