<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <FrameLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dialog_note"
                android:textColor="@color/main_p"
                android:textSize="20sp"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="14dp"
                android:background="@drawable/note_background"
                android:ems="10"
                android:hint="@string/note_desc"
                android:textColorHint="@color/light_black"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:maxLength="300"
                android:ellipsize="end"
                android:gravity="top"/>

            <TextView
                android:id="@+id/editBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/save"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="300dp"/>

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:text="@string/cancel"
                android:textColor="@color/dirty_white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/save_btn"
                android:layout_marginStart="180dp"
                android:layout_marginTop="300dp"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
